--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,40 +2,152 @@
 
 /* latin */
 @font-face {
-  font-family: 'Inter';
+  font-family: "Inter";
   font-style: normal;
   font-weight: 100 900;
   font-display: swap;
-  src: url(https://fonts.gstatic.com/s/inter/v18/UcC73FwrK3iLTeHuS_nVMrMxCp50SjIa1ZL7.woff2) format('woff2');
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+  src: url(https://fonts.gstatic.com/s/inter/v18/UcC73FwrK3iLTeHuS_nVMrMxCp50SjIa1ZL7.woff2)
+    format("woff2");
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
+    U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+20AC, U+2122, U+2191, U+2193,
+    U+2212, U+2215, U+FEFF, U+FFFD;
 }
 body {
-  font-family: 'Inter', sans-serif !important;
+  font-family: "Inter", sans-serif !important;
+}
+.container {
+  max-width: 1300px; /* Adjust as needed */
+  width: 100%;
+  margin: 0 auto;
+  padding-left: 16px; /* Small side padding */
+  padding-right: 16px; /* Small side padding */
+}
+/* sm: ≥640px (small tablets) */
+@media (min-width: 640px) {
+  .container {
+    padding-left: 1rem; /* 16px */
+    padding-right: 1rem;
+  }
 }
 
-.container {
-  max-width: 1300px !important;
-  margin: 0 auto;
-  width: 100%;
+/* md: ≥768px (tablets) */
+@media (min-width: 768px) {
+  .container {
+    padding-left: 1.25rem; /* 20px */
+    padding-right: 1.25rem;
+  }
+}
+
+/* lg: ≥1024px (desktops) */
+@media (min-width: 1024px) {
+  .container {
+    padding-left: 1.5rem; /* 24px */
+    padding-right: 1.5rem;
+  }
+}
+
+/* xl: ≥1280px (large desktops) */
+@media (min-width: 1280px) {
+  .container {
+    padding-left: 2rem !important; /* 32px */
+    padding-right: 2rem !important;
+  }
 }
 
 .heading {
-  color: #FFF;
+  color: #fff;
   font-family: Inter;
   font-style: normal;
   font-weight: 500;
   line-height: normal;
   letter-spacing: -0.32px;
 }
-  .scrollbar::-webkit-scrollbar {
-    width: 4px;
-  }
+.scrollbar::-webkit-scrollbar {
+  width: 4px;
+}
 
-  .scrollbar::-webkit-scrollbar-track {
-    background: transparent;
-  }
+.scrollbar::-webkit-scrollbar-track {
+  background: transparent;
+}
 
-  .scrollbar::-webkit-scrollbar-thumb {
-    background-color: #634C9F;
-    border-radius: 6px;
-  }
+.scrollbar::-webkit-scrollbar-thumb {
+  background-color: #634c9f;
+  border-radius: 6px;
+}
+input:focus {
+  outline: none;
+  border-color: #634c9f;
+}
+.catbtn {
+  border-radius: 8px 8px 0px 0px;
+  border-top: 1px solid #e5e7eb;
+  border-right: 1px solid #e5e7eb;
+  border-left: 1px solid #e5e7eb;
+}
+.catText{
+  color: #030712;
+font-family: Inter;
+font-size: 14px;
+font-style: normal;
+font-weight: 600;
+letter-spacing: -0.3px;
+}
+.navLink{
+  color: #030712;
+font-family: Inter;
+font-size: 13px;
+font-style: normal;
+font-weight: 600;
+letter-spacing: -0.3px;
+position: relative;
+padding-bottom: 12px;
+}
+.navLink::before {
+  content: "";
+  display: block;
+  width: 0;
+  height: 1px;
+  position: absolute;
+  bottom: 0px;
+  background-color: #634c9f;
+  transition: width 0.3s ease-in-out;
+}
+.navLink.active::before {
+  width: 115%;
+}
+.navLink.active{
+  color: #634c9f !important;
+}
+.navLink:hover::before {
+  width: 115%;
+}
+.navLink:hover {
+  color: #634c9f !important;
+}
+.almostFinished{
+  color: #DC2626 !important;
+}
+.saleBadge{
+  border-radius: 4px;
+background: linear-gradient(90deg, #DC2626 0%, #EA580C 100%);
+  color: #FFFFFF;
+  font-family: Inter;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 600;
+  letter-spacing: -0.3px;
+  padding: 2.5px 7px;
+  margin-left: 4px;
+}
+.almostFinished:hover{
+  color: #DC2626 !important;
+}
+.almostFinished.navLink:hover::before {
+  background-color: #DC2626 !important;
+}
+.almostFinished.navLink.active {
+  color: #DC2626 !important;
+}
+.almostFinished.navLink.active::before {
+  background-color: #DC2626 !important;
+}
